# ml-foundations-2026

./: .gitignore  LICENSE  README.md
.docker/: CMakeLists.txt  Dockerfile  Dockerfile.jetson  README.md  docker-compose.yml  requirements.txt
blog/: Vision-and-Goals
dsa/cpp/arrays_hashing/: contains_duplicate.cpp
dsa/python/arrays_hashing/: contains_duplicate.py  group_anagram.py  valid_anagram.py
papers/: README.md  vldrive_fable_directions.md  vldrive_fable_directions_humanized.md  vldrive_fable_summary.md  vldrive_fable_summary_humanized.md  vldrive_hermes_directions.md  vldrive_hermes_summary.md
papers/notes/: my-template.md  vldrive.md
